# usd8-core

./: .gitignore  .gitmodules  AUDIT-usd8-treasury-savings.md  LICENSE  README.md  SECURITY.md  decisionTradeOffs.md  echidna.yaml  foundry.toml
.github/workflows/: deep-fuzz.yml  test.yml
deployments/sepolia/: deployment.json  incident-simulation.json
offchain/: README.md  package-lock.json  package.json  vitest.config.ts
offchain-rust/: Cargo.toml  README.md  RUST_ONLY_PLAN.md  real-usdc-usdt-history-2026-01-15_2026-07-15-300.json  real-usdc-usdt-history-2026-04-15_2026-07-15.json
offchain-rust/.cargo/: audit.toml
offchain-rust/bench/: cold-start.mjs  collect_real_history.py  compare.mjs  real_history.py  run-bench.mjs  test_real_history.py  ts-kernel.mjs
offchain-rust/config/: example.json
offchain-rust/fixtures/: matrix.json  real-usdc-usdt-1000.json  real-usdc-usdt-wsteth-300-6m.json  small.json  tee-pcr-vectors.json
offchain-rust/job-api/: Cargo.toml
offchain-rust/job-api/.cargo/: audit.toml
offchain-rust/job-api/deploy/: Dockerfile.enclave  bucket-lifecycle.json  bucket-policy.json  build-release.sh  finalize-release.sh  install-parent.sh  instance-role-policy.json  janitor-role-policy.json  kms-key-policy.json  lambda-role-policy.json  operator-bootstrap-policy.json  usd8-tee-job.service  verify-ami.sh  verify-release.py
offchain-rust/job-api/deploy/tests/: test_release_manifest.py
offchain-rust/job-api/src/: lib.rs
offchain-rust/job-api/tests/: artifact.rs  capability_signing.rs  iam_policy.rs  janitor.rs  launch.rs  protocol.rs  proxy.rs  sepolia.rs  service.rs  signing.rs  terminal.rs  wire.rs
offchain-rust/src/: abi.rs  artifact.rs  attested_runtime.rs  chain.rs  checkpoint.rs  config.rs  engine.rs  ffi.rs  incident_open.rs  json.rs  lib.rs  main.rs  rpc.rs  tee.rs  typed_data.rs
offchain-rust/tests/: abi.rs  chain.rs  chain_reads.rs  cli.rs  config.rs  engine.rs  ffi.rs  golden_claim_results.rs  history.rs  incident_open.rs  json_cli.rs  open_typed_data.rs  parity.rs  production_vectors.rs  rpc.rs  score.rs  sepolia.rs  standalone.rs  tee.rs  typed_data.rs
offchain/rust-comparison/: README.md
offchain/src/: abiParity.ts  chain.ts  checkpointScore.ts  compute.ts  config.ts  ffi.ts  main.ts  runtime.ts  score.ts  tee.ts
offchain/test/: abiParity.test.ts  chain.test.ts  checkpointScore.test.ts  compute.test.ts  config.test.ts  goldenClaimResults.test.ts  runtime.test.ts  tee.test.ts
script/: 01_DeployTimelock.s.sol  02_DeployUSD8System.s.sol  Deploy.s.sol  README.md  USD8.s.sol
script/config/: DeploymentConfig.sol
script/testnet/: SepoliaDependencies.sol  VerifySepolia.s.sol  simulate_incident_open.py
src/: CoverPool.sol  DefiInsurance.sol  IStrategy.sol  IUsdOracle.sol  Managed.sol  Registry.sol  RegistryManaged.sol  SavingsUSD8.sol  SharedBase.sol  SingleAssetCoverPool.sol  Treasury.sol  USD8.sol
src/adapters/: ERC4626RateAdapter.sol  USD8SavingsAdapter.sol  USD8SavingsAdapterFactory.sol
src/deployment/: USD8SavingsBootstrap.sol  USD8SavingsGate.sol
src/interfaces/: IInsuredTokenAdapter.sol  IProfitDistributionReceiver.sol  IStrategy.sol  IUsdOracle.sol
src/oracles/: USD8PriceOracle.sol
src/strategies/: AaveV3UsdcStrategy.sol  ERC4626Strategy.sol  MorphoVaultStrategy.sol  StrategyBase.sol
src/vaults/: SavingsUSD8.sol  VestedERC4626.sol
tee/: Dockerfile  README.md  package-lock.json  package.json
tee/src/: chain.ts  compute.ts  config.ts  main.ts  sign.ts
test/: AuditFindings.t.sol  CoverPool.t.sol  DeployScript.t.sol  DeploymentConfig.t.sol  ERC4626Strategy.t.sol  Invariants.t.sol  SepoliaDependencies.t.sol  SettlementIntegration.t.sol  SingleAssetCoverPool.t.sol  StrategyConfig.t.sol  Treasury.t.sol  TreasuryConfig.t.sol  USD8.t.sol  USD8PriceOracle.t.sol
test-vectors/: README.md  golden-claim-results.json
test/invariant/: ERC4626StrategyInvariant.t.sol  InsuranceClaimInvariant.t.sol  InsuranceSettlementLifecycleInvariant.t.sol  RegistryTopologyInvariant.t.sol  TreasuryInvariant.t.sol  USD8SavingsInvariant.t.sol  USD8TokenInvariant.t.sol
test/kontrol/: README.md  TransientStorageSmoke.t.sol  Treasury.k.sol  TreasuryAclPause.k.sol  TreasuryEvents.k.sol  TreasuryHarvestDirect.k.sol  TreasuryHarvestHooks.k.sol  TreasuryInitUpgrade.k.sol  TreasuryLiquidityWalk.k.sol  TreasuryReceiverSet.k.sol  TreasuryReserveAdversarial.k.sol  TreasuryStrategyFlows.k.sol  TreasuryStrategySet.k.sol  TreasurySweep.k.sol  USD8ERC20.k.sol  USD8Events.k.sol  USD8Permit.k.sol  USD8Sweep.k.sol  USD8Token.k.sol  USD8Upgrade.k.sol
(+20 files in other folders)
