[package]
name = "usd8-settlement"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
publish = false
license = "BUSL-1.1"

[lib]
name = "usd8_settlement"
path = "src/lib.rs"

[features]
default = []
sepolia = []

[[bin]]
name = "usd8-settlement"
path = "src/main.rs"

[dependencies]
alloy-primitives = "=1.6.0"
alloy-sol-types = "=1.6.0"
async-trait = "=0.1.89"
ciborium = "=0.2.2"
hex = "=0.4.3"
hmac = "=0.12.1"
num-bigint = "=0.5.1"
num-traits = "=0.2.19"
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls", "json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_bytes = "=0.11.19"
serde_json = "=1.0.150"
sha3 = "=0.11.0"
sha2 = "=0.10.9"
thiserror = "=2.0.18"
tokio = { version = "=1.53.1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "net", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
aws-nitro-enclaves-nsm-api = "=0.5.2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
